--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -8,12 +8,6 @@
         font-size: 1em;
     }
 
-    // @media (max-width:1023px) {
-    //     font-size: calc(1rem + 0.225vw);
-    // }
-    //     @media (max-width:1023px) {
-    //         font-size: calc(1.2rem + 0.225vw);
-    // }
 }
 
 body {
@@ -21,12 +15,18 @@ body {
     font-family: Larsseit_bold, sans-serif;
 }
 
+.link {
+    border: 1px solid transparent;
+    transition: all .5s;
+
+    &:hover {
+        opacity: 0.8;
+        border: 1px solid rgb(140, 64, 240);
+    }
+}
+
 .container-fluid {
-    // max-width: 2400px;
-    max-width: 1440px;
-    // max-width: 100wh;
-    // padding-left: 1px;
-    // padding-right: 1px;
+    max-width: 90em;
     margin: 0 auto;
 
 }
@@ -38,19 +38,15 @@ body {
 .logo__link {
     font-family: Larsseit_bold, sans-serif;
     font-size: 1.5rem;
-    line-height: 1.4em;
+    line-height: 1.4;
     letter-spacing: -0.035em;
     color: #62D0DF;
-
-    // @media (max-width:1023px){
-    //     font-size: 2rem;
-    // }
 }
 
 .section__link {
     font-family: Larsseit_bold, sans-serif;
     font-size: 1rem;
-    line-height: 1.25em;
+    line-height: 1.25;
 }
 
 // !
