--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,12 +6,14 @@
 
 .wrapper {
     display: grid;
-    grid-template: minmax(80px, auto) 1fr minmax(80px, auto) /1fr;
+    grid-template: minmax(5rem, auto) 1fr minmax(5rem, auto) /1fr;
     grid-template-areas:
         "header"
         "main"
         "footer";
 }
+
+// header
 
 .header {
     grid-area: header;
@@ -72,12 +74,17 @@
         text-transform: uppercase;
         color: $light;
         font-family: Larsseit_bold, sans-serif;
-        // font-size: 0.875rem;
         line-height: 0.9;
         padding: 1.3em 1.9em;
         background-color: #62D0DF;
         border-radius: 50em;
         min-width: 50%;
+        transition: all .5s;
+
+        &:hover {
+            opacity: 0.8;
+        }
+
     }
 }
 
@@ -97,7 +104,6 @@
         box-shadow: -2px 3px 17px 0px #000;
 
         &.active {
-            // transform: translate(35px, 257px);
             bottom: -178%;
 
         }
@@ -120,7 +126,6 @@
     }
 
     &__list-link {
-        // font-size: 0.875rem;
         line-height: 1.1;
         color: inherit;
         padding-left: 0.9em;
@@ -133,10 +138,6 @@
             width: 50%;
         }
     }
-
-    // .menu.menu--open{
-    //     transform: translateY(35px, 257px); 
-    // } 
 
     &__list-link--active {
         position: relative;
@@ -176,16 +177,20 @@
     }
 }
 
+// main
+
 .main {
     grid-area: main;
 }
+
+// description
 
 .description {
     @media (min-width:1173px) {
         &__container {
             margin-left: 11.2rem;
             display: grid;
-            grid-template: minmax(765px, auto) / repeat(auto-fit, minmax(500px, 1fr));
+            grid-template: minmax(47.8em, auto) / repeat(auto-fit, minmax(31.25em, 1fr));
             overflow-x: clip;
         }
 
@@ -196,13 +201,17 @@
 
     &__content {
         display: grid;
-        grid-auto-flow: row;
         grid-template: minmax(4em, auto) minmax(10.4em, auto) minmax(7.5em, auto) 1fr/1fr;
         padding-bottom: 4.7em;
 
         @media (max-width:1172px) {
             padding-left: 14%;
             padding-right: 1em;
+        }
+
+        @media (max-width:767px) {
+            padding-left: 5%;
+            padding-right: 5%;
         }
     }
 
@@ -226,10 +235,6 @@
     &__links {
         margin-top: 3.9rem;
         display: flex;
-
-        @media (max-width:400px) {
-            flex-direction: column;
-        }
     }
 
     &__link {
@@ -237,15 +242,16 @@
         letter-spacing: 0.1em;
         align-self: start;
         padding: 0.94em 1.875em;
+
+        @media (max-width:320px) {
+            padding-left: 1.2em;
+            padding-right: 1.2em;
+        }
     }
 
     &__link--who-am-i {
         color: $light;
         background-color: #F9B640;
-
-        @media (max-width:400px) {
-            margin-bottom: 1em;
-        }
     }
 
     &__link--what-to-do {
@@ -263,7 +269,6 @@
 
         @media (max-width:1172px) {
             overflow: visible;
-            // max-height: 770px;
             width: 100%;
             transform: initial;
             padding: 0 0 85% 0;
@@ -282,11 +287,11 @@
             margin-top: -78%;
         }
 
-        @media (max-width:350px){
+        @media (max-width:350px) {
             margin-top: -90%;
         }
 
-        @media (max-width:300px){
+        @media (max-width:300px) {
             margin-top: -110%;
         }
     }
@@ -308,15 +313,15 @@
             bottom: 0;
         }
 
-        @media (max-width:420px){
+        @media (max-width:420px) {
             height: 55%;
         }
 
-        @media (max-width:350px){
+        @media (max-width:350px) {
             height: 48%;
         }
 
-        @media (max-width:300px){
+        @media (max-width:300px) {
             height: 40%;
         }
     }
@@ -328,7 +333,7 @@
         &__container {
             margin-left: 11.2rem;
             display: grid;
-            grid-template: 1fr / 58.5% minmax(525px, 1fr);
+            grid-template: 1fr / 58.5% minmax(32.8rem, 1fr);
         }
     }
 
@@ -412,11 +417,12 @@
 
         @media (max-width:1172px) {
             flex-direction: column;
-            padding: 5rem 14% 5rem 14%;
+            padding: 3rem 5% 3rem 14%;
         }
 
-        @media (max-width:1172px) {
-            padding: 1rem 5% 1rem 5%;
+        @media (max-width:767px) {
+            padding-left: 5%;
+            padding-right: 5%;
         }
     }
 
@@ -439,6 +445,9 @@
         }
     }
 }
+
+// planning
+// 1
 
 .planning {
     &__title {
@@ -540,6 +549,8 @@
         }
     }
 
+    // 2
+
     &__items--big {
         @media (min-width:768px) {
             display: grid;
@@ -549,8 +560,6 @@
         @media (min-width:1024px) {
             grid-template-columns: repeat(3, 1fr);
         }
-
-
     }
 
     &__item--big {
@@ -646,6 +655,8 @@
         }
     }
 
+    // 3
+
     &__cards {
         @media (min-width:767px) {
             display: grid;
@@ -693,10 +704,10 @@
         @media (max-width:767px) {
             font-size: 1.5rem;
         }
-
-
     }
 }
+
+// addition
 
 .addition {
 
@@ -742,6 +753,8 @@
         color: #FAB63E;
     }
 }
+
+// candidates
 
 .candidates {
     display: flex;
@@ -818,6 +831,8 @@
     }
 }
 
+// contacts
+
 .contacts {
     font-size: 0.875rem;
     color: rgba(34, 53, 111, 0.5);
@@ -870,13 +885,14 @@
             padding-bottom: 1rem;
         }
 
-        @media (max-width:767px){
+        @media (max-width:767px) {
             padding-top: 2em;
+            padding-bottom: 0;
         }
     }
 
-    &__item{
-        @media (max-width:767px){
+    &__item {
+        @media (max-width:767px) {
             margin-bottom: 2em;
         }
     }
@@ -937,6 +953,7 @@
     }
 }
 
+// footer
 
 .footer {
     grid-area: footer;
@@ -951,7 +968,7 @@
     &__copy {
         position: relative;
 
-        @media (max-width:767px){
+        @media (max-width:767px) {
             text-align: center;
         }
 
