--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -244,8 +244,8 @@
         padding: 0.94em 1.875em;
 
         @media (max-width:320px) {
-            padding-left: 1.2em;
-            padding-right: 1.2em;
+            padding-left: 1.1em;
+            padding-right: 1.1em;
         }
     }
 
@@ -333,7 +333,7 @@
         &__container {
             margin-left: 11.2rem;
             display: grid;
-            grid-template: 1fr / 58.5% minmax(32.8rem, 1fr);
+            grid-template: 1fr/1fr minmax(36.5%, 1fr);
         }
     }
 
@@ -359,7 +359,7 @@
     &__slogan {
         color: $light;
         font-size: 2.25rem;
-        line-height: 0.64;
+        line-height: 0.75;
         letter-spacing: -0.006em;
         padding-top: 4.19em;
         padding-bottom: 2.08em;
@@ -791,7 +791,7 @@
 
         @media (max-width:767px) {
             margin-bottom: 1em;
-            padding-top: 1em;
+            padding-top: 2em;
         }
 
     }
@@ -814,7 +814,7 @@
     &__text {
         font-family: Larsseit_regular, sans-serif;
         max-width: 36.19rem;
-        margin-bottom: 1.67em;
+        margin-bottom: 1em;
     }
 
     &__link {
@@ -960,6 +960,7 @@
     background-color: #62D0DF;
     color: $light;
     padding: 2em 0 1.625em 11.2em;
+    position: relative;
 
     @media (max-width:767px) {
         padding-left: 0;
@@ -977,6 +978,32 @@
             left: -1.1em;
             top: 13%;
 
+        }
+    }
+}
+
+.go-top {
+    position: absolute;
+    right: 5em;
+
+    &__link {
+        display: inline-block;
+        position: fixed;
+        bottom: 8em;
+        width: 4em;
+        height: 4em;
+        border-radius: 5em;
+        background-color: #FAB63E;
+        opacity: 0.7;
+        z-index: 2;
+
+        &::after {
+            position: absolute;
+            content: "";
+            border: 1em solid;
+            border-color: transparent transparent #22356F;
+            right: 25%;
+            top: 7%;
         }
     }
 }
