--- a/app/scss/_burger.scss
+++ b/app/scss/_burger.scss
@@ -6,6 +6,7 @@
     border: transparent;
     border-radius: 50%;
     position: relative;
+    z-index: 4;
 
     &__line {
         position: absolute;
@@ -22,7 +23,6 @@
             content: '';
             display: block;
             position: absolute;
-            left: 0;
             margin-top: -2px;
             top: 50%;
             width: 100%;
@@ -58,8 +58,8 @@
             width: 3em;
             height: 3em;
             display: block;
-            position: absolute;
-            left: 79%;
+            position: fixed;
+            right: 2%;
             top: 1em;
         }
     }
