--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -101,8 +101,7 @@
         z-index: 3;
 
         &.active {
-            bottom: 47%;
-
+            bottom: 32%;
         }
     }
 
@@ -194,6 +193,12 @@
         @media (max-width:1172px) {
             margin-left: 0;
         }
+
+        @media (min-width:1850px){
+            &__container{
+                overflow-x:initial;
+            }
+        }
     }
 
     &__content {
@@ -269,19 +274,19 @@
             width: 100%;
             transform: initial;
             padding: 0 0 85% 0;
-            margin-top: -40%;
+            margin-top: -35%;
         }
 
         @media (max-width:550px) {
-            margin-top: -50%;
+            margin-top: -40%;
         }
 
         @media (max-width:420px) {
-            margin-top: -66%;
+            margin-top: -60%;
         }
 
         @media (max-width:380px) {
-            margin-top: -78%;
+            margin-top: -70%;
         }
 
         @media (max-width:350px) {
@@ -987,7 +992,7 @@
     &__link {
         display: inline-block;
         position: fixed;
-        bottom: 8em;
+        bottom: 2em;
         width: 4em;
         height: 4em;
         border-radius: 5em;
