--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -16,3 +16,13 @@
     font-weight: normal;
 }
 
+/* font-weight:100 / Thin
+font-weight:200 / Extra
+font-weight:300 / Light
+font-weight:400 / Normal/ Regular
+font-weight:500 / Medium
+font-weight:600 / Semi Bold
+font-weight:700 / Bold
+font-weight:800 / Extra Bold
+font-weight:900 / Black */
+
